--- a/styles/architect.css
+++ b/styles/architect.css
@@ -32,6 +32,13 @@
     padding: 20px 24px;
     border-radius: 8px;
 }
+main{
+    max-width: 1420px;
+    margin: 0 auto;
+}
+main > section{
+    margin-top: 130px;
+}
 
 /* header styles */
 
@@ -71,10 +78,29 @@
     width: 100%;
 }
 
-
-
-
-
+/* team and feature style */
+.teams{
+    align-items: center;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+.our-feature{
+    margin-left: 130px;
+    max-width: 530px;
+}
+.feature-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+#quick-list{
+    font-weight: 500;
+}
+#Feature{
+    color: #FF900E;
+}
 
 
 
@@ -84,8 +110,25 @@
 
 /* responsive style */
 @media screen and (max-width: 576px) {
-    .navbar, .nav-links{
+    .navbar,
+     .nav-links,
+      .teams{
         flex-direction: column;
+    }
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .our-feature{
+        margin-left: 20px;
     }
 }
 
+/* medium device responsive style */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-feature{
+        margin-left: 50px auto;
+    }
+}
